--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,19 @@
 @import "./base/typo";
 @import "./base/base";
 @import "./layouts/header";
+@import "./layouts/intro";
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@import "./poubelle";
