--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,22 +4,68 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 body {
   margin: 0px;
+  font-family: "roboto", sans-serif;
 }
 
 .header {
   text-align: center;
   align-content: center;
+  position: relative;
 }
 .header_localization {
   box-shadow: 0 0.188rem 0.188rem 0 rgba(0, 0, 0, 0.05) inset;
   display: flex;
   justify-content: center;
   color: black;
-  background-color: white;
+  background-color: #f3f3f3;
+}
+.header_logo {
+  padding: 12px;
 }
 .header i {
   margin-right: 0.625rem;
   padding-top: 1rem;
+}
+
+.intro {
+  margin-top: 25px;
+}
+.intro h2 {
+  width: 70%;
+  font-size: 25px;
+  text-align: center;
+  margin: auto;
+}
+.intro p {
+  text-align: center;
+  align-content: center;
+  font-size: 18px;
+}
+.intro_subtitle {
+  width: 80%;
+  margin: auto;
+  padding-top: 10px;
+}
+.intro_button {
+  margin-top: 25px;
+  height: 55px;
+  width: 240px;
+  padding: 15px;
+  border-radius: 30px 30px 30px 30px;
+  color: white;
+  background-image: linear-gradient(to top, #9356DC, #FF79DA);
+  border: none;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  margin-left: 21%;
+  font-weight: bold;
+  box-shadow: 1px 4px 12px -3px rgba(0, 0, 0, 0.95);
+  cursor: pointer;
+  transition-duration: 0.25s;
+}
+.intro_button:hover {
+  transform: scale(1.02);
 }
 
 /*# sourceMappingURL=style.css.map */
