--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -7,3 +7,28 @@
     display: flex; 
     justify-content: center;
 }
+
+@mixin intro_button {
+    margin-top: 25px;
+        height: 55px;
+        width: 240px;
+        padding: 15px;
+        border-radius: 30px 30px 30px 30px;
+        color: white;
+        background-image: linear-gradient(to top, $primary-color, $secondary-color);
+        border: none;
+        font-size: 16px;
+        display: flex;
+        justify-content: center;
+        margin-left: 21%;
+        font-weight: bold;
+        box-shadow: 1px 4px 12px -3px rgba(0,0,0,0.95);
+        cursor: pointer;
+        transition-duration: .25s;
+        &:hover {
+            transform: scale(1.02);
+        }
+}
+
+    
+
