--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,9 @@
 @import "./base/base";
 @import "./layouts/header";
 @import "./layouts/intro";
+@import "./layouts/step";
+@import "./layouts/card";
+@import "./layouts/footer";
 
 
 
