--- a/sass/layouts/_intro.scss
+++ b/sass/layouts/_intro.scss
@@ -1,18 +1,32 @@
-.intro{
+.intro {
     margin-top: 25px;
+
     & h2 {
-    width: 70%;
-    font-size: 25px;
-    text-align: center;
-    margin: auto;
-} & p {
-    @include text-center;
-    font-size: 18px;
-} &_subtitle {
-    width: 80%;
-    margin: auto;
-    padding-top: 10px;
-} &_button {
-    @include intro_button;
-}
+        width: 70%;
+        font-size: 25px;
+        text-align: center;
+        margin: auto;
+    }
+
+    & p {
+        @include text-center;
+        font-size: 16px;
+        font-weight: 300;
+    }
+
+    &_subtitle {
+        width: 80%;
+        margin: auto;
+        padding-top: 10px;
+    }
+
+    &_main {
+        margin-top: 25px;
+        &_button {
+            @include intro_button;
+        }
+
+    }
+
+    
 }
