--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -9,26 +9,90 @@
 }
 
 @mixin intro_button {
-    margin-top: 25px;
-        height: 55px;
-        width: 240px;
-        padding: 15px;
-        border-radius: 30px 30px 30px 30px;
-        color: white;
-        background-image: linear-gradient(to top, $primary-color, $secondary-color);
-        border: none;
-        font-size: 16px;
-        display: flex;
-        justify-content: center;
-        margin-left: 21%;
-        font-weight: bold;
-        box-shadow: 1px 4px 12px -3px rgba(0,0,0,0.95);
-        cursor: pointer;
-        transition-duration: .25s;
-        &:hover {
-            transform: scale(1.02);
-        }
+    height: 55px;
+    width: 240px;
+    padding: 15px;
+    border-radius: 30px 30px 30px 30px;
+    color: white;
+    background-image: linear-gradient(to top, $primary-color, $secondary-color);
+    border: none;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    font-weight: bold;
+    box-shadow: 1px 4px 12px -3px rgba(0,0,0,0.95);
+    cursor: pointer;
+    transition-duration: .25s;
+    &:hover {
+        transform: scale(1.02);
+    }
 }
 
-    
+@mixin box-shadow {
+    box-shadow: 1px 4px 12px -3px rgba(0,0,0,0.95);
+}
+
+@mixin transform-scale {
+    transform: scale(1.02);
+}
+
+@mixin step-design {
+    counter-increment: steps;
+    content: counter(steps);
+    background-color: $primary-color;
+    color: white;
+    font-size: 12px;
+    width: 20px;
+    height: 20px;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 25px;
+    left: -10px;
+}
+
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@mixin new-label {
+    content: "Nouveau";
+    position: absolute;
+    height: 2rem;
+    width: 4rem;
+    background-color: $tertiary-color;
+    padding-left: 3px;
+    color: green;
+    font-size: smaller;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    right: 2rem;
+    top: 1rem;
+    font-weight: 700;
+    border-radius: 3px;
+}
+
+@mixin card-image {
+    margin-left: 19px;
+    width: 90%;
+    object-fit: cover;
+    height: 190px;
+    border-radius: 10px 10px 0 0;
+}
+
+@mixin heart-icon {
+    :hover {
+		background: -webkit-linear-gradient($primary-color, $secondary-color);
+		-webkit-background-clip: text;
+        background-clip: text;
+		-webkit-text-fill-color: transparent;
+		font-weight: 900;
+	}
+}  
 
