--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,3 +2,6 @@
 $primary-color: #9356DC ;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
+$grey: #7e7e7e;
+$lightgrey: #f6f6f6;
+$darkgrey: #353535;
