--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,18 +7,7 @@
 @import "./layouts/step";
 @import "./layouts/card";
 @import "./layouts/footer";
+@import "./restau/restau";
+@import "./utils/animations.scss";
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-@import "./poubelle";
