--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -11,6 +11,8 @@
     } & i {
         margin-right: 0.625rem;
         padding-top: 1rem;
-    } 
+    } & p {
+        margin: 17px;
+    }
     
 }
