--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -96,3 +96,10 @@
 	}
 }  
 
+@mixin green-hr {
+    background-color: $tertiary-color;
+    height: 2px;
+    width: 9%;
+    margin-left: 0;
+    border: none;
+}
