--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -22,134 +22,134 @@ p {
     margin: 0;
 }
 
-.loader {
-    animation: hideAnimation 0s ease-in 4s;
+
+/* Absolute Center Spinner */
+.loading {
+    animation: hideAnimation 0s ease-in 2s;
     animation-fill-mode: forwards;
-    &_ajax-flipper {
-        width: 125px;
-        height: 45px;
-        /* 	border:1px solid black; */
-        /* 	border-radius: 0px 23px; */
-        display: block;
-        z-index: 11111;
-        position: absolute;
-        top: 30%;
-        left: 35%;
-        margin: 100px auto;
-        -webkit-transform-style: preserve-3d;
-        -ms-transform-style: preserve-3d;
-        -o-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-    
-        &_overlay {
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            z-index: 9999;
-            background-image: linear-gradient(to top, #9356DC, #FF79DA);
-            height: 100%;
-            width: 100%;
-            display: none;
-        }
-    
-        &_container {
-            height: 100%;
-            width: 100%;
-            display: none;
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            z-index: 10000;
-            /* 	background: rgba(0, 0, 0, 0.6); */
-            background: transparent;
-    
-            &_flip-animation {
-                box-shadow: -1px 2px 7px 3px #ffa8d8;
-                -webkit-animation: rotation3D_1 1.8s infinite ease-in-out;
-                animation: rotation3D_1 1.8s infinite ease-in-out;
-            }
-    
-            &_overlap-flip-animation {
-                margin-top: 99px;
-                -webkit-animation: rotation3D_2 1.8s infinite ease-in-out;
-                animation: rotation3D_2 1.8s infinite ease-in-out;
-            }
-        }
-        
+    position: fixed;
+    z-index: 999;
+    height: 2em;
+    width: 2em;
+    overflow: show;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+/* Transparent Overlay */
+.loading:before {
+    content: '';
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(rgba(20, 20, 20, .8), rgba(0, 0, 0, .8));
+
+    background: linear-gradient(to top, #9356dc, #FF79DA);
+}
+
+/* :not(:required) hides these rules from IE9 and below */
+.loading:not(:required) {
+    /* hide "loading..." text */
+    font: 0/0 a;
+    color: transparent;
+    text-shadow: none;
+    background-color: transparent;
+    border: 0;
+}
+
+.loading:not(:required):after {
+    content: '';
+    display: block;
+    font-size: 10px;
+    width: 1em;
+    height: 1em;
+    margin-top: -0.5em;
+    -webkit-animation: spinner 150ms infinite linear;
+    -moz-animation: spinner 150ms infinite linear;
+    -ms-animation: spinner 150ms infinite linear;
+    -o-animation: spinner 150ms infinite linear;
+    animation: spinner 150ms infinite linear;
+    border-radius: 0.5em;
+    -webkit-box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0, rgba(146, 29, 29, 0.75) 1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) 0 1.5em 0 0, rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) -1.5em 0 0 0, rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0, rgba(255, 255, 255, 0.75) 0 -1.5em 0 0, rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
+    box-shadow: rgba(255, 255, 255, 0.75) 1.5em 0 0 0, rgba(255, 255, 255, 0.75) 1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) 0 1.5em 0 0, rgba(255, 255, 255, 0.75) -1.1em 1.1em 0 0, rgba(255, 255, 255, 0.75) -1.5em 0 0 0, rgba(255, 255, 255, 0.75) -1.1em -1.1em 0 0, rgba(255, 255, 255, 0.75) 0 -1.5em 0 0, rgba(255, 255, 255, 0.75) 1.1em -1.1em 0 0;
+}
+
+/* Animation */
+
+@-webkit-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
-.ajax-flipper {
-    width: 125px;
-    height: 45px;
-    /* 	border:1px solid black; */
-    /* 	border-radius: 0px 23px; */
-    display: block;
-    z-index: 11111;
-    position: absolute;
-    top: 30%;
-    left: 35%;
-    margin: 100px auto;
-    -webkit-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+@-moz-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
-.flip-animation {
-    box-shadow: -1px 2px 7px 3px #ffa8d8;
-    -webkit-animation: rotation3D_1 1.8s infinite ease-in-out;
-    animation: rotation3D_1 1.8s infinite ease-in-out;
+@-o-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
-.ajax-flipper-container {
-    height: 100%;
-    width: 100%;
-    display: none;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 10000;
-    /* 	background: rgba(0, 0, 0, 0.6); */
-    background: transparent;
-}
+@keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
 
-/** ajax-flipper-container is not working in safari due to this extra overlay is required for safari. */
-.ajax-flipper-overlay {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 9999;
-    background-image: linear-gradient(to top, #9356DC, #FF79DA);
-    height: 100%;
-    width: 100%;
-    display: none;
-}
-
-/* This animation overlap the the current animation of image to show the image is rotate in right way.*/
-.overlap-flip-animation {
-    margin-top: 99px;
-    -webkit-animation: rotation3D_2 1.8s infinite ease-in-out;
-    animation: rotation3D_2 1.8s infinite ease-in-out;
-} 
-
-.ajax-flip-img {
-    width: 85px;
-    height: 22px;
-    transform-origin: 41% 54%;
-    vertical-align: middle;
-    position: relative;
-    top: 25%;
-    left: 16%;
-}
-
-img.rotate-180-y {
-    left: 29%;
-    transform: rotateY(180deg);
-}
-
-.loader .loader_ajax-flipper_overlay,
-.loader .loader_ajax-flipper_container {
-    display: block;
-
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
