--- a/sass/layouts/_card.scss
+++ b/sass/layouts/_card.scss
@@ -6,6 +6,14 @@
     & h3 {
         padding: 30px 10px 5px 25px;
         margin: 1rem;
+
+        @include tablet {
+            font-size: 22px;
+        }
+
+        @include desktop {
+            font-size: 22px;
+        }
     }
 
     &_list {
@@ -14,11 +22,32 @@
         justify-content: space-between;
         gap: 2rem;
 
+        @include tablet {
+            gap: 3rem;
+        }
+
+        @include desktop {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            padding-bottom: 4rem;
+            gap: 1rem;
+        }
+
+
         &_restaurant {
             height: 250px;
 
+            @include desktop {
+                width: 23%;
+            }
+
             &_image {
                 @include card-image;
+
+                @include tablet {
+                    width: 95%;
+                }
             }
 
             &_description {
@@ -30,14 +59,26 @@
                 border-radius: 0 0 10px 10px;
                 padding-bottom: 10px;
 
+                @include tablet {
+                    width: 95%;
+                }
+
                 &_title {
                     width: 80%;
+
+                    @include tablet {
+                        font-size: 18px;
+                    }
                 }
 
                 &_heart {
                     margin: auto;
                     font-size: 25px;
                     @include heart-icon;
+
+                    @include tablet {
+                        margin-right: 1rem;
+                    }
                 }
             }
 
@@ -51,6 +92,7 @@
         color: black;
     }
 }
+
 .p_description {
     font-weight: 300;
 }
@@ -62,8 +104,16 @@
 
 .new::before {
     @include new-label;
-    /*@media only screen and (min-width : 1224px) {
-        right: 15rem;
-        top: 3rem;
-    }*/
+
+    @include tablet {
+        margin-right: 0.5rem;
+        font-size: 16px;
+        width: 5rem;
+    }
+
+    @include desktop {
+        margin-right: 1rem;
+        right: 0.5rem;
+
+    }
 }
