--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,18 +1,44 @@
-.header {
+.header_accueil {
     @include text-center;
     position: relative;
+    padding: 12px;
+
     &_localization {
-        box-shadow: 0 0.188rem 0.188rem 0 rgba(0,0,0,0.05) inset;
+        box-shadow: 0 0.188rem 0.188rem 0 rgba(0, 0, 0, 0.05) inset;
         @include flex-center;
         color: black;
         background-color: #f3f3f3;
-    } &_logo {
-        padding: 12px;
-    } & i {
+
+        @include tablet {
+            font-size: 17px;
+        }
+
+        @include desktop {
+            font-size: 17px;
+        }
+    }
+
+    &_logo {
+        @include desktop {
+            position: unset;
+            transform: none;
+            padding: 12px;
+        }
+        @include tablet {
+            position: unset;
+            transform: none;
+            padding: 12px;
+        }
+    }
+
+    & i {
         margin-right: 0.625rem;
         padding-top: 1rem;
-    } & p {
-        margin: 17px;
     }
-    
+
+    & p {
+        margin: 17px;
+
+    }
+
 }
