--- a/sass/restau/_restau.scss
+++ b/sass/restau/_restau.scss
@@ -1,141 +1,248 @@
 #restau {
     background-color: $lightgrey;
     width: 100%;
+}
 
-    .banner img {
-        max-width: 100%;
-        object-fit: cover;
+.banner img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+
+    @include desktop {
+        max-height: 700px;
+        width: 100%;
+    }
+}
+
+
+.header {
+    align-items: center;
+    @include text-center;
+    display: flex;
+    flex-direction: row;
+
+    &_logo {
+        transform: translateX(27%);
+
+        @include desktop {
+            width: 57%;
+        }
+
+        @include tablet {
+            margin-left: 14rem;
+        }
     }
 
-    header {
+    &_logo-restau {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+
+        & img {
+            width: 50%;
+        }
+    }
+}
+
+.arrow {
+    padding: 20px;
+    font-weight: 600;
+    cursor: pointer;
+
+    &_icon {
+        font-size: 1.5rem;
+        margin-right: unset;
+        padding-top: unset;
+    }
+}
+
+.main {
+    border-radius: 1rem 1rem 0 0;
+    margin-top: -57px;
+    position: relative;
+
+    &_container {
         display: flex;
         flex-direction: row;
+        padding: 1.5rem 1.5rem;
+        border-radius: 2rem 2rem 0 0;
+        background-color: $lightgrey;
+
+        @include desktop {
+            padding: 2rem 2rem;
+        }
+
+        &_title {
+            width: 90%;
+
+            &_text {
+                font-family: "Shrikhand", "cursive";
+            }
+        }
+
+        &_heart {
+            margin: auto;
+            font-size: 25px;
+            @include heart-icon;
+
+            @include desktop {
+                margin-left: 5rem;
+
+            }
+        }
+
+    }
+}
+
+.menu {
+    @include tablet {
+        margin-left: 1.5rem;
     }
 
-    .header {
-        &_logo-restau {
+    &_responsive {
+        @include desktop {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+
+    & h3 {
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 15px;
+        padding-top: 26px;
+    }
+
+    &_item {
+        margin-bottom: 1rem;
+        gap: 1rem;
+        @include list-model;
+        @include flex-row;
+
+        @include desktop {
+            max-width: 400px;
+        }
+
+        @include tablet {
+            max-width: 750px;
+        }
+
+        &:hover {
+            .menu_item_price_check {
+                background-color: #99E2D0;
+                visibility: visible;
+                opacity: 1;
+                transform-origin: right;
+                transform: scaleX(1);
+                animation: translate-left 0.8s linear;
+                min-width: 20%;
+                display: flex;
+            }
+
+            .menu_item_price_check>i {
+                animation: rotate-icon 1.5s ease-in-out both;
+                color: white;
+                display: flex;
+                align-items: center;
+                font-size: 1.5rem;
+            }
+        }
+
+        &_description {
+            padding: 1rem;
+            width: 85%;
+        }
+
+        &_price {
+            padding-bottom: 1rem;
             display: flex;
-            width: 100%;
-            justify-content: center;
-            & img {
-                width: 50%;
+            align-items: flex-end;
+            margin-right: 1rem;
+
+            &_check {
+                background-color: #99E2D0;
+                padding: 1rem;
+                margin-right: -15%;
+                visibility: hidden;
+                border-radius: 0 1rem 1rem 0;
+                transform: scaleX(0);
+                transform-origin: right;
+                transition: 500ms all;
+                opacity: 0;
             }
         }
     }
 
-    .arrow {
-        padding: 20px;
-       font-weight: 600;
-       cursor: pointer; 
-       &_icon {
-        font-size: 1.5rem;
-        margin-right: unset; 
-        padding-top: unset;
-       }
-    }
-
-    .main {
-        border-radius: 1rem 1rem 0 0;
-        margin-top: -57px;
+    &_flex {
         position: relative;
 
-        &_container {
+        &>* {
+            border-radius: 1rem;
+        }
+
+        &_item {
+            @for $i from 1 through 3 {
+                &:nth-child(#{$i}) {
+                    animation-delay: 100ms * $i;
+                }
+            }
+
+            padding: 12px;
             display: flex;
             flex-direction: row;
-            padding: 1rem 1rem;
-            border-radius: 2rem 2rem 0 0;
-            background-color: $lightgrey;
+            justify-content: space-between;
+            align-items: flex-end;
+            margin-top: 15px;
+            font-size: 17px;
+            height: 45px;
+            @include box-shadow;
+            animation: appear 1s;
+            animation-fill-mode: both;
+            overflow: hidden;
 
-            &_title {
-                width: 90%;
 
-                &_text {
-                    font-family: "Shrikhand", "cursive";
-                }
+            &_description p {
+                font-weight: 300;
+                font-size: 15px;
             }
 
-            &_heart {
-                margin: auto;
-                font-size: 25px;
-                @include heart-icon;
-            }
-
-        }
-    }
-
-    .menu {
-        & h3 {
-            text-transform: uppercase;
-            font-weight: 300;
-            font-size: 15px;
-            padding-top: 26px;
-        }
-
-        &_flex {
-            position: relative;
-
-            &>* {
-                border-radius: 1rem;
-            }
-
-            &_item {
-                @for $i from 1 through 3 {
-                    &:nth-child(#{$i}) {
-                        animation-delay: 100ms * $i;
-                    } 
-                }
-                padding: 12px;
+            &_price {
                 display: flex;
-                flex-direction: row;
-                justify-content: space-between;
+                margin-left: auto;
                 align-items: flex-end;
-                margin-top: 15px;
-                font-size: 17px;
-                height: 45px;
-                @include box-shadow;
-                animation: appear 1s;
-                animation-fill-mode: both;
-                overflow: hidden;
 
-
-                &_description p {
-                    font-weight: 300;
-                    font-size: 15px;
+                &_check {
+                    background-color: $tertiary-color;
+                    padding: 1rem;
+                    margin-right: -3rem;
+                    width: 3rem;
                 }
 
-                &_price {
-                    display: flex;
-                    margin-left: auto;
-                    align-items: flex-end;
-                    &_check {
-                        background-color: $tertiary-color;
-                        padding: 1rem;
-                        margin-right: -3rem;
-                        width: 3rem;
-                    }
-                    &:hover .menu-item_check {
-                        margin-right: 0;
-                    }
-                    & > * {
-                        padding: 1rem;
-
-                    }
+                &:hover .menu-item_check {
+                    margin-right: 0;
                 }
-                
+
+                &>* {
+                    padding: 1rem;
+
+                }
             }
-        }
 
-        .intro_main_button {
-            margin-top: 2rem;
-            margin-bottom: 2rem;
-            cursor: pointer;
-            @include transform-scale;
-        }
-
-        & hr {
-            @include green-hr;
         }
     }
 
+    .intro_main_button {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        cursor: pointer;
+        @include transform-scale;
+    }
 
+    & hr {
+        @include green-hr;
+
+        @include desktop {
+            width: 7%;
+        }
+    }
 }
