--- a/sass/restau/_restau.scss
+++ b/sass/restau/_restau.scss
@@ -151,6 +151,15 @@
         &_description {
             padding: 1rem;
             width: 85%;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+
+            &_title {
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
         }
 
         &_price {
