--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,12 +250,13 @@ p {
   justify-content: center;
   margin: auto;
   font-weight: bold;
-  box-shadow: 1px 4px 12px -3px rgba(0, 0, 0, 0.95);
   cursor: pointer;
   transition-duration: 0.25s;
 }
 .intro_main_button:hover {
   transform: scale(1.02);
+  opacity: 0.85;
+  box-shadow: 1px 4px 12px -3px rgba(0, 0, 0, 0.95);
 }
 @media screen and (max-width: 64rem) and (min-width: 31.25rem) {
   .intro_main_button {
@@ -446,6 +447,7 @@ p {
 .cards_list_restaurant_description_heart {
   margin: auto;
   font-size: 25px;
+  color: black;
 }
 .cards_list_restaurant_description_heart :hover {
   background: -webkit-linear-gradient(#9356dc, #FF79DA);
@@ -653,6 +655,9 @@ footer a {
   padding-top: 26px;
 }
 .menu_item {
+  animation: appear 1s;
+  animation-fill-mode: both;
+  overflow: hidden;
   margin-bottom: 1rem;
   gap: 1rem;
   border-radius: 1rem;
@@ -660,6 +665,15 @@ footer a {
   overflow: hidden;
   display: flex;
   flex-direction: row;
+}
+.menu_item:nth-child(1) {
+  animation-delay: 100ms;
+}
+.menu_item:nth-child(2) {
+  animation-delay: 200ms;
+}
+.menu_item:nth-child(3) {
+  animation-delay: 300ms;
 }
 @media screen and (min-width: 64.063rem) {
   .menu_item {
@@ -733,9 +747,6 @@ footer a {
   font-size: 17px;
   height: 45px;
   box-shadow: 1px 4px 12px -3px rgba(0, 0, 0, 0.95);
-  animation: appear 1s;
-  animation-fill-mode: both;
-  overflow: hidden;
 }
 .menu_flex_item:nth-child(1) {
   animation-delay: 100ms;
@@ -768,10 +779,29 @@ footer a {
   padding: 1rem;
 }
 .menu .intro_main_button {
+  height: 55px;
+  width: 240px;
+  padding: 15px;
+  border-radius: 30px 30px 30px 30px;
+  color: white;
+  background-image: linear-gradient(to top, #9356dc, #FF79DA);
+  border: none;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  font-weight: bold;
+  cursor: pointer;
+  transition-duration: 0.25s;
   margin-top: 2rem;
   margin-bottom: 2rem;
   cursor: pointer;
   transform: scale(1.02);
+}
+.menu .intro_main_button:hover {
+  transform: scale(1.02);
+  opacity: 0.85;
+  box-shadow: 1px 4px 12px -3px rgba(0, 0, 0, 0.95);
 }
 .menu hr {
   background-color: #99E2D0;
