--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -26,11 +26,12 @@
     justify-content: center;
     margin: auto;
     font-weight: bold;
-    box-shadow: 1px 4px 12px -3px rgba(0,0,0,0.95);
     cursor: pointer;
     transition-duration: .25s;
     &:hover {
         transform: scale(1.02);
+        opacity: 0.85;
+        box-shadow: 1px 4px 12px -3px rgba(0,0,0,0.95);
     }
 }
 
